@@ -84,7 +84,7 @@ The implementation is divided into two commands. The purpose of the
 .B vnstat
 command is to provide an interface for querying the traffic information stored
 in the database whereas the daemon
-.BR vnstatd (1)
+.BR vnstatd (8)
 is responsible for data retrieval, caching and storage. Although the daemon
 process is constantly running as a service, it is actually spending most of its
 time sleeping between data updates.
@@ -460,7 +460,7 @@ Teemu Toivola <tst at iki dot fi>
 
 .SH "SEE ALSO"
 
-.BR vnstatd (1),
+.BR vnstatd (8),
 .BR vnstati (1),
 .BR vnstat.conf (5),
 .BR proc (5),
