@@ -11,7 +11,7 @@ vnstat.conf \- vnStat configuration file
 .BR vnstat (1),
 .BR vnstati (1)
 and
-.BR vnstatd (1)
+.BR vnstatd (8)
 all use the same configuration file for configuration related settings.
 Some of the settings are common for all three programs. The file
 consists of keyword-argument pairs, one per line. Empty lines and
@@ -453,5 +453,5 @@ Teemu Toivola <tst at iki dot fi>
 
 .BR vnstat (1),
 .BR vnstati (1),
-.BR vnstatd (1),
+.BR vnstatd (8),
 .BR units (7)
