@@ -1,4 +1,4 @@
-.TH VNSTATD 1 "JULY 2019" "version 2.3" "User Manuals"
+.TH VNSTATD 8 "JULY 2019" "version 2.3" "User Manuals"
 .SH NAME
 vnstatd \- daemon based database updating for vnStat
 
