@@ -346,6 +346,6 @@ Teemu Toivola <tst at iki dot fi>
 .SH "SEE ALSO"
 
 .BR vnstat (1),
-.BR vnstatd (1),
+.BR vnstatd (8),
 .BR vnstat.conf (5),
 .BR units (7)
